--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 body {
   background-color: #d9dcd6;
 }
-/*Header*/
+/*Sets the font, text size, and background color for the header*/
 .header {
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -27,7 +27,7 @@ body {
 }
 /*Header links: Search Enginge op, Online rep, Social media*/
 .header nav {
-    /* I changed div to nav to make it more semantic and to match the index */
+  /* I changed div to nav to make it more semantic and to match the index */
   padding-top: 15px;
   margin-right: 20px;
   float: right;
@@ -77,7 +77,7 @@ p {
   display: inline-block;
   margin-left: 20px;
 }
-/* Side text - Lead Generation, Brand awareness, cost management*/
+/* Aside section - Lead Generation, Brand awareness, cost management- sets the font and positioning */
 .benefits {
   margin-right: 20px;
   padding: 20px;
@@ -88,55 +88,26 @@ p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #2589bd;
 }
-/*Lead generation font color and margin*/
+/*Sets the font color and margin for the Aside headers*/
 .benefit-header {
   margin-bottom: 32px;
   color: #ffffff;
 }
-/* Brand awareness font color and margin
-.benefit-header {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-/*Cost management font color and margin*/
-/* .benefit-header {
-  margin-bottom: 32px;
-  color: #ffffff; */ 
-/* } */
-/*Lead generation header*/
+
+/*Aside headers*/
 .benefit-header h3 {
   margin-bottom: 10px;
   text-align: center;
 }
-/* brand awareness header
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-/*Cost management header*/
-/* .benefit-cost h3 {
-  margin-bottom: 10px;
-  text-align: center; */ 
 
-/*Lead generation image*/
+/*Aside images*/
 .benefit-header img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
-/* Brand awareness image
-.benefit-header img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-/*Cost management image*/
-/* .benefit-header img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}  */
-/* Search engine optimization text box */
+
+/* Article text boxes */
 .article-graphic {
   margin-bottom: 20px;
   padding: 50px;
@@ -145,53 +116,18 @@ p {
   background-color: #0072bb;
   color: #ffffff;
 }
-/* Online repuation management text box
-.online-reputation-management {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-/* Social media marketing text box */
-/* .social-media-marketing {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}  */
 
-/*Search engine image position*/
+/*Article image position*/
 .article-graphic img {
   max-height: 200px;
 }
-/* Online reputation management image position
-.article-graphic img {
-  max-height: 200px;
-}
-Social media marketing image position
-.article-graphic img {
-  max-height: 200px;
-} */
 
-/*Searching engine optimization header*/
+/*Article header*/
 .article-graphic h2 {
   margin-bottom: 20px;
   font-size: 36px;
 }
-/* Online reputation management header
-.online-reputation-management h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-Social media marketing headers
-.social-media-marketing h2 {
-  margin-bottom: 20px;
-  font-size: 36px; 
-}
+
 /*Footer elements*/
 .footer {
   padding: 30px;
