--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ p {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
-  background-image: url("../images/digital-marketing-meeting.jpg");
+  background-image: url("../images/digital-marketing-meeting.jpg"); /*DO WE ADD THE ALT HERE? or in the html??? I HAVE QUESTIONS!*/
   background-size: cover;
   background-position: center;
 }
